# watchdog

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs  watchdog.exe.manifest  watchdog.rc
.github/workflows/: ci.yml  release.yml
bucket/: watchdog.json
crates/watchdog-core/: Cargo.toml
crates/watchdog-core/src/: lib.rs
crates/watchdog-detect/: Cargo.toml
crates/watchdog-detect/src/: baseline.rs  detector.rs  lib.rs  paths.rs  scorer.rs  signature.rs
crates/watchdog-detect/src/detectors/: dns_anomaly.rs  entropy_burst.rs  image_load_from_unusual_path.rs  lolbin_spawn.rs  mod.rs  new_network_egress.rs  off_hours_activity.rs  process_impersonation.rs  rapid_file_traversal.rs  rare_destination.rs  registry_persistence.rs  unsigned_from_user_path.rs  unusual_parent_child.rs  usb_exfil_hint.rs
crates/watchdog-enrich/: Cargo.toml
crates/watchdog-enrich/src/: cmdline.rs  device_map.rs  drive_watcher.rs  enricher.rs  lib.rs  network_inspect.rs  process_table.rs  socket_table.rs  wifi_scan.rs
crates/watchdog-etw/: Cargo.toml
crates/watchdog-etw/src/: lib.rs  session.rs
crates/watchdog-etw/src/providers/: dns_client.rs  kernel_file.rs  kernel_network.rs  kernel_process.rs  kernel_registry.rs  mod.rs
crates/watchdog-tui/: Cargo.toml
crates/watchdog-tui/src/: app.rs  bracket_frame.rs  defenses.rs  dns_cache.rs  export.rs  host_probe.rs  incidents.rs  lib.rs  network_footprint.rs  theme.rs  ui.rs
docs/: index.html  web-styles.css
src/: main.rs  pipeline.rs
src/service/: install.rs  mod.rs  run.rs  sink.rs
