[package]
name = "watchdog-etw"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
description = "ETW ingestion layer: real-time session + per-provider handlers."

[dependencies]
watchdog-core     = { workspace = true }
anyhow            = { workspace = true }
crossbeam-channel = { workspace = true }

[target.'cfg(windows)'.dependencies]
ferrisetw = { workspace = true }
